crates/tests/databases-tests/src/yugabyte/snapshots/databases_tests__yugabyte__query_tests__predicates__select_where_name_like.snap
---
source: crates/tests/databases-tests/src/yugabyte/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 1,
        "Title": "For Those About To Rock We Salute You"
      },
      {
        "AlbumId": 4,
        "Title": "Let There Be Rock"
      },
      {
        "AlbumId": 59,
        "Title": "Deep Purple In Rock"
      },
      {
        "AlbumId": 108,
        "Title": "Rock In Rio [CD1]"
      },
      {
        "AlbumId": 109,
        "Title": "Rock In Rio [CD2]"
      },
      {
        "AlbumId": 213,
        "Title": "Pure Cult: The Best Of The Cult (For Rockers, Ravers, Lovers & Sinners) [UK]"
      },
      {
        "AlbumId": 216,
        "Title": "Hot Rocks, 1964-1971 (Disc 1)"
      }
    ]
  }
]
